--- a/fourcapital1-war/nbproject/project.properties
+++ b/fourcapital1-war/nbproject/project.properties
@@ -30,6 +30,11 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.all-themes-1.0.10.jar=..\\lib\\all-themes-1.0.10.jar
+file.reference.io-7.1.2.jar=..\\lib\\io-7.1.2.jar
+file.reference.kernel-7.1.2.jar=..\\lib\\kernel-7.1.2.jar
+file.reference.layout-7.1.2.jar=..\\lib\\layout-7.1.2.jar
+file.reference.slf4j-api-1.7.25.jar=..\\lib\\slf4j-api-1.7.25.jar
+file.reference.slf4j-jdk14-1.7.25.jar=..\\lib\\slf4j-jdk14-1.7.25.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +52,12 @@ javac.classpath=\
     ${reference.fourcapital1-ejb.dist}:\
     ${libs.PrimeFaces_6.2.classpath}:\
     ${libs.Gson_2.8.2.classpath}:\
-    ${file.reference.all-themes-1.0.10.jar}
+    ${file.reference.all-themes-1.0.10.jar}:\
+    ${file.reference.io-7.1.2.jar}:\
+    ${file.reference.kernel-7.1.2.jar}:\
+    ${file.reference.layout-7.1.2.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.slf4j-jdk14-1.7.25.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
