--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -28,6 +28,14 @@ libs.javaee-endorsed-api-7.0.classpath=\
 libs.javaee-endorsed-api-7.0.displayName=Java EE 7 Endorsed API Library
 libs.javaee-endorsed-api-7.0.javadoc=\
     ${base}/javaee-endorsed-api-7.0/javaee-doc-api.jar
+libs.junit_4.classpath=\
+    ${base}/junit_4/junit-4.12.jar
+libs.junit_4.displayName=JUnit 4.12
+libs.junit_4.javadoc=\
+    ${base}/junit_4/junit-4.12-javadoc.jar
+libs.junit_4.prop-maven-dependencies=junit:junit:4.12:jar
+libs.junit_4.src=\
+    ${base}/junit_4/junit-4.12-sources.jar
 libs.primefaces.classpath=\
     ${base}/primefaces/primefaces-5.0.jar
 libs.primefaces.displayName=PrimeFaces 5.0
